--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "@supabase/supabase-js": "^2.21.0",
+    "bootstrap": "^5.2.3",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
