--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.21.0",
     "bootstrap": "^5.2.3",
     "pinia": "^2.0.32",
+    "vee-validate": "^4.9.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
